<resources>
    <string name="app_name">design2</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">signature_editable</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bookname">书名</string>
    <string name="bookpic">书籍封面</string>
    <string name="booklan">语言</string>
    <string name="bookauthor">作者</string>
    <string name="bookpub">出版社</string>
    <string name="bookintro">介绍</string>
    <string name="comment">评论</string>
    <string name="no_brief">暂无简介。</string>
    <string name="review_submit">提交</string>
    <string name="review_cancel">取消</string>

    <string name="loginAndreg">登录/注册</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="account">用户名</string>
    <string name="password">密码</string>
    <string name="RegOk">注册成功</string>

    <string name="stop_download_tip">停止</string>
    <string name="text_login">登录</string>
    <string name="tv_register">新用户注册</string>
    <string name="et_password_tip">请输入密码</string>
    <string name="et_rp_password_tip">请再次输入密码</string>
    <string name="et_rp_captcha">请输入验证码</string>
    <string name="et_account_tip">请输入用户名</string>
    <string name="text_register">注册</string>
    <string name="text_agreement_tip">我已阅读并同意《</string>
    <string name="link_agreement">
        <a href="https://shimo.im/docs/RgkDpd3D3Gp6t3rD">用户服务协议</a>
    </string>
    <string name="login_edit_digits">0123456789qwertyuiopasdfghjklzxcvbnm_ABCDEFGHIJKLMNOPQRSTUVW</string>
    <string name="account_hint_text">请输入账号</string>
    <string name="password_hint_text">请输入密码</string>
    <string name="login_button_text">登录</string>
    <string name="register_button_text">注册</string>
    <string name="password_input_error_tip">请确认您输入的密码是否正确</string>
    <string name="user_unregister_tip">该用户还未注册</string>
    <string name="password_is_empty_tip">密码不能为空</string>
    <string name="account_is_empty_tip">账号不能为空</string>
    <string name="register_success_text_tip">注册成功</string>
    <string name="account_exist_text_tip">该账号已存在，请重新输入</string>
    <string name="dialog_tip_text">提示</string>
    <string name="login_dialog_message_text">该账号还未注册，是否跳转到注册页面进行注册？</string>
    <string name="confirm_text">确定</string>
    <string name="cancle_text">取消</string>

    <string name="my_review">我的评论</string>

    <!-- button -->
    <string name="btn_start">开始</string>
    <string name="btn_pause">暂停</string>
    <string name="btn_resume">继续</string>
    <string name="btn_stop">放弃</string>
    <string name="btn_skip">略过</string>

    <string name="scene_title_work">开始阅读</string>
    <string name="scene_title_break">开始休息</string>

    <string name="scene_work">工作</string>
    <string name="scene_short_break">短时休息</string>
    <string name="scene_long_break">长时休息</string>

    <string name="amount_durations">阅读总时间 %1$d 分钟</string>
    <string name="stage_time_unit">%1$d 分钟</string>

    <!-- 通知 -->
    <string name="notification_focus">番茄工作中</string>
    <string name="notification_focus_pause">番茄暂停中</string>
    <string name="notification_break">正在休息</string>
    <string name="notification_break_pause">休息暂停中</string>
    <string name="notification_time_left">还剩</string>
    <string name="notification_finish">放下工作，准备休息</string>
    <string name="notification_finish_content">已经完成一个番茄钟，休息一下吧！</string>
    <string name="notification_break_finish">休息结束</string>
    <string name="notification_break_finish_content">休息结束，开启下一个番茄钟吧！</string>

    <!-- 设置 -->
    <string name="toast_tick_sound_on">滴答声已开启</string>
    <string name="toast_tick_sound_off">滴答声已关闭</string>
    <string name="pref_title_tick_title">定时器设置</string>
    <string name="pref_title_work_length">工作时长</string>
    <string name="pref_title_short_break">休息时长</string>
    <string name="pref_title_long_break">长休息时长</string>
    <string name="pref_title_long_break_frequency">长休息间隔</string>
    <string name="pref_title_frequency_value">%1$d 个番茄</string>
    <string name="pref_title_time_value">%1$d 分钟</string>

    <string name="list_book_progress">已读  %1$d </string>

    <string name="pref_title_pomodoro_element">番茄元素</string>
    <string name="pref_title_pomodoro_mode">番茄模式</string>
    <string name="pref_title_pomodoro_mode_summary">在番茄模式下不能暂停定时器</string>
    <string name="pref_title_infinity_mode">自动模式</string>
    <string name="pref_title_infinity_mode_summary">自动开始下一个番茄钟</string>
    <string name="pref_title_ticking_sound">滴答声</string>
    <string name="pref_title_ticking_sound_summary">在番茄钟工作期间，持续的滴答声</string>

    <string name="pref_title_notifications">提示</string>
    <string name="pref_title_use_notification">完成后提示</string>
    <string name="pref_title_notification_sound">提示音</string>
    <string name="pref_title_notification_vibrate">震动</string>

    <string name="pref_title_advanced">高级</string>
    <string name="pref_title_screen_on">屏幕常亮</string>
    <string name="pref_title_screen_on_summary">仅针对主界面，在番茄钟期间保持屏幕常亮</string>
    <string name="pref_title_check_update">检查更新</string>
    <string name="check_update_connected_failed">无法连接网络</string>
    <string name="check_update_connected_error">网络连接异常，请稍后再试</string>
    <string name="check_update_checking">正在检查更新</string>
    <string name="check_update_new_version">发现新版本</string>
    <string name="check_update_last_version">已经是最新版本</string>
    <string name="check_update_message">版本号: %1$s\n\n版本说明:\n%2$s</string>
    <string name="check_update_update_now">立即更新</string>
    <string name="check_update_update_later">稍后更新</string>
    <string name="check_update_mobile_network">
        "当前处于移动网络环境下，"
        "继续使用可能产生流量，请确认是否继续？"
    </string>
    <string name="check_update_get_info_failed">获取版本信息失败，请重试</string>
</resources>
