<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/account_edit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:drawableLeft="@drawable/phone_icon"
        android:digits="@string/login_edit_digits"
        android:hint="@string/account_hint_text"
        android:layout_marginTop="120dp"/>
    <EditText
        android:id="@+id/password_edit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="@id/account_edit"
        app:layout_constraintRight_toRightOf="@id/account_edit"
        app:layout_constraintTop_toBottomOf="@id/account_edit"
        android:drawableLeft="@drawable/password_icon"
        android:hint="@string/password_hint_text"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"/>
    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="@id/password_edit"
        app:layout_constraintRight_toRightOf="@id/password_edit"
        app:layout_constraintTop_toBottomOf="@id/password_edit"
        android:text="@string/register_button_text"
        android:background="@color/colorAccent"
        android:layout_marginTop="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>