<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/card_radius"
    app:cardElevation="@dimen/card_elevation"
    android:layout_marginEnd="@dimen/item_margin"
    android:layout_marginBottom="5dp"
    android:layout_marginStart="@dimen/item_margin"
    android:layout_marginTop="@dimen/item_margin"
    android:id="@+id/root_view">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/item_margin">

    <ImageView
        android:id="@+id/image_book"
        android:layout_width="64dp"
        android:layout_height="96dp"
        android:layout_centerVertical="true"
        android:scaleType="fitXY"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image_book"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/image_book">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookname"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:gravity="center_vertical"
            android:text="@string/bookauthor"
            android:textColor="@android:color/black"
            android:textSize="@dimen/item_text_size" />

        <TextView
            android:id="@+id/publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/author"
            android:maxEms="18"
            android:text="@string/bookpub"
            android:textColor="@android:color/black"
            android:textSize="@dimen/item_text_size" />

        <TextView
            android:id="@+id/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/publisher"
            android:maxEms="18"
            android:maxLines="3"
            android:ellipsize="end"
            android:text="@string/bookintro"
            android:textSize="@dimen/item_text_size" />
    </RelativeLayout>

</RelativeLayout>

</androidx.cardview.widget.CardView>